Changes
=======

3.2 (unreleased)
----------------

- Add support for Python 3.7, 3.8 and 3.9.

- Drop support for Python 3.4.


3.1 (2018-06-13)
----------------

- Added AfterTraversalEvent which is fired after all traversal is done.


3.0.3 (2018-01-12)
------------------

- Rearrange tests such that Travis CI can pick up all functional tests too.

3.0.2 (2018-01-05)
------------------

- Additional test fixes.

3.0.1 (2018-01-05)
------------------

- Additional test fixes.

3.0 (2018-01-03)
----------------

- In the template directory grokker, ignore directories and files
  without extensions.

- Drop support of Python 2.6.

- Claim support for Python 3.4, 3.5, and 3.6.

2.10.2 (2016-02-02)
-------------------

- Update tests.


2.10.1 (2014-07-29)
-------------------

- Fix broken MANIFEST.in


2.10 (2014-07-29)
-----------------

- Add an helper ``render_provider`` to look up and render a given
  content provider.


2.9 (2014-05-15)
----------------

- Make possible to disable the template warning with the help of the
  ``GROK_DISABLE_TEMPLATE_WARNING`` environment variable.

- The ``skin`` option of ``grokcore.view.util.url`` now accepts
  strings that will be used as skin name as possible alternative to a
  skin interface.

- The ``skin`` directive can now be used on interfaces that inherits
  only from ``IRequest`` instead of ``IBrowserRequest``.

2.8 (2012-12-11)
----------------

- Add a ``skin=[skin component]`` argument to the ``grokcore.view.util.url()``
  function and ``grokcore.view.components.View.url`` method. This allows for
  computing URLs on a specific skin. Note that it is not verified whether
  the computed URL actually exist on the specified skin.

2.7 (2012-05-01)
----------------

- Use the component registration api in grokcore.component.

- Improve error message when a templatedir() directive points to a non-
  existent directory. (fix launchpad issue 680528).

- Improve error message when a template is required for a component